custom close icon

--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -117,6 +117,12 @@ If you want to apply a custom animation to the modal body you can do like this:
 
 You can customise the close icon used by the Modal by providing your own image or svg.
 
+<ExampleRendered name="customCloseIcon" />
+
+```js file=../examples/CustomCloseIcon.tsx
+
+```
+
 ### Custom container
 
 By default, the Modal will be rendered at the end of the html body tag. If you want to render the Modal in your own container, you can pass your own Element to the container prop.
