--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -127,6 +127,12 @@ You can customise the close icon used by the Modal by providing your own image o
 
 By default, the Modal will be rendered at the end of the html body tag. If you want to render the Modal in your own container, you can pass your own Element to the container prop.
 
+<ExampleRendered name="customContainer" />
+
+```js file=../examples/CustomContainer.tsx
+
+```
+
 ## Accessibility
 
 - Use the `aria-labelledby` and `aria-describedby` props to follow the [ARIA best practices](https://www.w3.org/TR/wai-aria-practices/#dialog_modal).
