--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -23,6 +23,8 @@ yarn add react-responsive-modal
 
 [![Edit react-responsive-modal](https://codesandbox.io/static/img/play-codesandbox.svg)](https://codesandbox.io/s/9jxp669j2o)
 
+<ExampleRendered name="simple" />
+
 ```javascript
 import React, { useState } from 'react';
 import ReactDOM from 'react-dom';
@@ -40,6 +42,11 @@ const App = () => {
       <button onClick={onOpenModal}>Open modal</button>
       <Modal open={open} onClose={onCloseModal} center>
         <h2>Simple centered modal</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+          pulvinar risus non risus hendrerit venenatis. Pellentesque sit amet
+          hendrerit risus, sed porttitor quam.
+        </p>
       </Modal>
     </div>
   );
