--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -105,7 +105,7 @@ Customising the Modal style via css is really easy. For example if you add the f
 
 ### Custom animation
 
-If you want to change the default animation, you can do so by creating your own css animation. For example if you add the following css to your app you will get the following result:
+If you want to change the default animation, you can do so by creating your own css animation. The modal and the overlay can be animated separately. For example if you add the following css to your app you will get the following result:
 
 ```css file=../examples/custom-animation.css
 
