--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -8,6 +8,8 @@ A simple responsive and accessible react modal.
 - Multiple modals.
 - Accessible modals.
 - Easily customizable via props.
+- Typescript support
+- [Small bundle size](https://bundlephobia.com/result?p=react-responsive-modal)
 
 ## Installation
 
