Add test cases for focus trap options

--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -93,6 +93,16 @@ If you want to disable this behavior, set the `focusTrapped` prop to `false`.
 
 ```
 
+### Focus Trapped on modal root
+
+You can also set to trap focus within the modal, but not to focus first visible element. To do this use `focusTrapOptions` prop and set `focusOn` to `modalRoot`.
+
+<ExampleRendered name="focusTrappedOnModalRoot" />
+
+```js file=../examples/FocusTrappedOnModalRoot.tsx
+
+```
+
 ### Custom styling with css
 
 Customising the Modal style via css is really easy. For example if you add the following css to your app you will get the following result:
