Simplify and rename focusTrapOptions to initialFocusRef

--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -93,13 +93,13 @@ If you want to disable this behavior, set the `focusTrapped` prop to `false`.
 
 ```
 
-### Focus Trapped options
+### Focus Trapped initial focus
 
-You can also set to trap focus within the modal, but decide where to put focus when opened. To do this use `focusTrapOptions` prop and set `focusOn` to a ref of an element you want to focus. In this example we focus on the modal root element.
+You can also set to trap focus within the modal, but decide where to put focus when opened. To do this use `initialFocusRef` prop and set it to a ref of an element you want to focus. In this example we focus on the modal root element.
 
-<ExampleRendered name="focusTrappedOptions" />
+<ExampleRendered name="focusTrappedInitialFocus" />
 
-```js file=../examples/FocusTrappedOptions.tsx
+```js file=../examples/FocusTrappedInitialFocus.tsx
 
 ```
 
@@ -190,12 +190,13 @@ By default, the Modal will be rendered at the end of the html body tag. If you w
 | **closeIconId**         | `string`                                                                                                                                                                                                                               |           | id attribute for the close icon button.                                                                                                                                                                            |
 | **closeIcon**           | `React.ReactNode`                                                                                                                                                                                                                      |           | Custom icon to render (svg, img, etc...).                                                                                                                                                                          |
 | **focusTrapped**        | `boolean`                                                                                                                                                                                                                              | true      | When the modal is open, trap focus within it.                                                                                                                                                                      |
-| **focusTrapOptions**    | `{ focusOn?: React.RefElement<HTMLDivElement> }`                                                                                                                                                                                       | undefined | Options for focus trap. Useful if you want to focus a different element when modal opens.                                                                                                                          |
+| **initialFocusRef**     | `React.RefElement<HTMLElement>`                                                                                                                                                                                                        | undefined | Sets focus on this specific element when modal opens if focus trap is used.                                                                                                                                        |
 | **container**           | `Element`                                                                                                                                                                                                                              |           | You can specify a container prop which should be of type `Element`. The portal will be rendered inside that element. The default behavior will create a div node and render it at the at the end of document.body. |
 | **classNames**          | `{ root?: string; overlay?: string; overlayAnimationIn?: string; overlayAnimationOut?: string; modal?: string; modalAnimationIn?: string; modalAnimationOut?: string; closeButton?: string; closeIcon?: string; }`                     |           | An object containing classNames to style the modal.                                                                                                                                                                |
 | **styles**              | `{ root?: React.CSSProperties; overlay?: React.CSSProperties; overlay?: React.CSSProperties; modalContainer?: React.CSSProperties; modal?: React.CSSProperties; closeButton?: React.CSSProperties; closeIcon?: React.CSSProperties; }` |           | An object containing the styles objects to style the modal.                                                                                                                                                        |
 | **animationDuration**   | `number`                                                                                                                                                                                                                               | 300       | Animation duration in milliseconds.                                                                                                                                                                                |
 | **role**                | `string`                                                                                                                                                                                                                               | "dialog"  | ARIA role for modal                                                                                                                                                                                                |
+| **ref**                 | `React.RefElement<HTMLDivElement>`                                                                                                                                                                                                     | undefined | Ref for modal dialog element                                                                                                                                                                                       |
 | **ariaLabelledby**      | `string`                                                                                                                                                                                                                               |           | ARIA label for modal                                                                                                                                                                                               |
 | **ariaDescribedby**     | `string`                                                                                                                                                                                                                               |           | ARIA description for modal                                                                                                                                                                                         |
 | **modalId**             | `string`                                                                                                                                                                                                                               |           | id attribute for modal                                                                                                                                                                                             |
