feat: add options to set initial focus within modal (#476)

--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -93,6 +93,16 @@ If you want to disable this behavior, set the `focusTrapped` prop to `false`.
 
 ```
 
+### Focus Trapped initial focus
+
+You can also set to trap focus within the modal, but decide where to put focus when opened. To do this use `initialFocusRef` prop and set it to a ref of an element you want to focus. In this example we focus on the modal root element.
+
+<ExampleRendered name="focusTrappedInitialFocus" />
+
+```js file=../examples/FocusTrappedInitialFocus.tsx
+
+```
+
 ### Custom styling with css
 
 Customising the Modal style via css is really easy. For example if you add the following css to your app you will get the following result:
@@ -169,29 +179,31 @@ By default, the Modal will be rendered at the end of the html body tag. If you w
 
 ## Props
 
-| Name                    | Type                                                                                                                                                                                                                                   | Default  | Description                                                                                                                                                                                                        |
-| ----------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **open\***              | `boolean`                                                                                                                                                                                                                              |          | Control if the modal is open or not.                                                                                                                                                                               |
-| **center**              | `boolean`                                                                                                                                                                                                                              | false    | Should the dialog be centered.                                                                                                                                                                                     |
-| **closeOnEsc**          | `boolean`                                                                                                                                                                                                                              | true     | Is the modal closable when user press esc key.                                                                                                                                                                     |
-| **closeOnOverlayClick** | `boolean`                                                                                                                                                                                                                              | true     | Is the modal closable when user click on overlay.                                                                                                                                                                  |
-| **blockScroll**         | `boolean`                                                                                                                                                                                                                              | true     | Whether to block scrolling when dialog is open.                                                                                                                                                                    |
-| **showCloseIcon**       | `boolean`                                                                                                                                                                                                                              | true     | Show the close icon.                                                                                                                                                                                               |
-| **closeIconId**         | `string`                                                                                                                                                                                                                               |          | id attribute for the close icon button.                                                                                                                                                                            |
-| **closeIcon**           | `React.ReactNode`                                                                                                                                                                                                                      |          | Custom icon to render (svg, img, etc...).                                                                                                                                                                          |
-| **focusTrapped**        | `boolean`                                                                                                                                                                                                                              | true     | When the modal is open, trap focus within it.                                                                                                                                                                      |
-| **container**           | `Element`                                                                                                                                                                                                                              |          | You can specify a container prop which should be of type `Element`. The portal will be rendered inside that element. The default behavior will create a div node and render it at the at the end of document.body. |
-| **classNames**          | `{ root?: string; overlay?: string; overlayAnimationIn?: string; overlayAnimationOut?: string; modal?: string; modalAnimationIn?: string; modalAnimationOut?: string; closeButton?: string; closeIcon?: string; }`                     |          | An object containing classNames to style the modal.                                                                                                                                                                |
-| **styles**              | `{ root?: React.CSSProperties; overlay?: React.CSSProperties; overlay?: React.CSSProperties; modalContainer?: React.CSSProperties; modal?: React.CSSProperties; closeButton?: React.CSSProperties; closeIcon?: React.CSSProperties; }` |          | An object containing the styles objects to style the modal.                                                                                                                                                        |
-| **animationDuration**   | `number`                                                                                                                                                                                                                               | 300      | Animation duration in milliseconds.                                                                                                                                                                                |
-| **role**                | `string`                                                                                                                                                                                                                               | "dialog" | ARIA role for modal                                                                                                                                                                                                |
-| **ariaLabelledby**      | `string`                                                                                                                                                                                                                               |          | ARIA label for modal                                                                                                                                                                                               |
-| **ariaDescribedby**     | `string`                                                                                                                                                                                                                               |          | ARIA description for modal                                                                                                                                                                                         |
-| **modalId**             | `string`                                                                                                                                                                                                                               |          | id attribute for modal                                                                                                                                                                                             |
-| **onClose\***           | `() => void`                                                                                                                                                                                                                           |          | Callback fired when the Modal is requested to be closed by a click on the overlay or when user press esc key.                                                                                                      |
-| **onEscKeyDown\***      | `(event: KeyboardEvent) => void`                                                                                                                                                                                                       |          | Callback fired when the escape key is pressed.                                                                                                                                                                     |
-| **onOverlayClick\***    | `(event: React.MouseEvent<HTMLDivElement, MouseEvent>) => void`                                                                                                                                                                        |          | Callback fired when the overlay is clicked.                                                                                                                                                                        |
-| **onAnimationEnd\***    | `() => void`                                                                                                                                                                                                                           |          | Callback fired when the Modal has exited and the animation is finished.                                                                                                                                            |
+| Name                    | Type                                                                                                                                                                                                                                   | Default   | Description                                                                                                                                                                                                        |
+| ----------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **open\***              | `boolean`                                                                                                                                                                                                                              |           | Control if the modal is open or not.                                                                                                                                                                               |
+| **center**              | `boolean`                                                                                                                                                                                                                              | false     | Should the dialog be centered.                                                                                                                                                                                     |
+| **closeOnEsc**          | `boolean`                                                                                                                                                                                                                              | true      | Is the modal closable when user press esc key.                                                                                                                                                                     |
+| **closeOnOverlayClick** | `boolean`                                                                                                                                                                                                                              | true      | Is the modal closable when user click on overlay.                                                                                                                                                                  |
+| **blockScroll**         | `boolean`                                                                                                                                                                                                                              | true      | Whether to block scrolling when dialog is open.                                                                                                                                                                    |
+| **showCloseIcon**       | `boolean`                                                                                                                                                                                                                              | true      | Show the close icon.                                                                                                                                                                                               |
+| **closeIconId**         | `string`                                                                                                                                                                                                                               |           | id attribute for the close icon button.                                                                                                                                                                            |
+| **closeIcon**           | `React.ReactNode`                                                                                                                                                                                                                      |           | Custom icon to render (svg, img, etc...).                                                                                                                                                                          |
+| **focusTrapped**        | `boolean`                                                                                                                                                                                                                              | true      | When the modal is open, trap focus within it.                                                                                                                                                                      |
+| **initialFocusRef**     | `React.RefElement<HTMLElement>`                                                                                                                                                                                                        | undefined | Sets focus on this specific element when modal opens if focus trap is used.                                                                                                                                        |
+| **container**           | `Element`                                                                                                                                                                                                                              |           | You can specify a container prop which should be of type `Element`. The portal will be rendered inside that element. The default behavior will create a div node and render it at the at the end of document.body. |
+| **classNames**          | `{ root?: string; overlay?: string; overlayAnimationIn?: string; overlayAnimationOut?: string; modal?: string; modalAnimationIn?: string; modalAnimationOut?: string; closeButton?: string; closeIcon?: string; }`                     |           | An object containing classNames to style the modal.                                                                                                                                                                |
+| **styles**              | `{ root?: React.CSSProperties; overlay?: React.CSSProperties; overlay?: React.CSSProperties; modalContainer?: React.CSSProperties; modal?: React.CSSProperties; closeButton?: React.CSSProperties; closeIcon?: React.CSSProperties; }` |           | An object containing the styles objects to style the modal.                                                                                                                                                        |
+| **animationDuration**   | `number`                                                                                                                                                                                                                               | 300       | Animation duration in milliseconds.                                                                                                                                                                                |
+| **role**                | `string`                                                                                                                                                                                                                               | "dialog"  | ARIA role for modal                                                                                                                                                                                                |
+| **ref**                 | `React.RefElement<HTMLDivElement>`                                                                                                                                                                                                     | undefined | Ref for modal dialog element                                                                                                                                                                                       |
+| **ariaLabelledby**      | `string`                                                                                                                                                                                                                               |           | ARIA label for modal                                                                                                                                                                                               |
+| **ariaDescribedby**     | `string`                                                                                                                                                                                                                               |           | ARIA description for modal                                                                                                                                                                                         |
+| **modalId**             | `string`                                                                                                                                                                                                                               |           | id attribute for modal                                                                                                                                                                                             |
+| **onClose\***           | `() => void`                                                                                                                                                                                                                           |           | Callback fired when the Modal is requested to be closed by a click on the overlay or when user press esc key.                                                                                                      |
+| **onEscKeyDown\***      | `(event: KeyboardEvent) => void`                                                                                                                                                                                                       |           | Callback fired when the escape key is pressed.                                                                                                                                                                     |
+| **onOverlayClick\***    | `(event: React.MouseEvent<HTMLDivElement, MouseEvent>) => void`                                                                                                                                                                        |           | Callback fired when the overlay is clicked.                                                                                                                                                                        |
+| **onAnimationEnd\***    | `() => void`                                                                                                                                                                                                                           |           | Callback fired when the Modal has exited and the animation is finished.                                                                                                                                            |
 
 ## License
 
